@@ -1,3 +1,8 @@
+2011-04-18  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-pack.lisp (resize-frame-constrained): Takes care of
+	border size.
+
 2011-04-17  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-pack.lisp (move-frame-constrained)
